# renovate-custom-datasource-provider

./: .dockerignore  .gitignore  .releaserc.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: architect-review.md  documentation-expert.md  python-cli.md  python-pro.md  test-engineer.md
.claude/commands/: commit.md  generate-tests.md
.github/workflows/: ci.yml  release.yml
src/renovate_datasource/: __init__.py  cli.py  main.py
src/renovate_datasource/adapters/: __init__.py  base_provider.py  http_client.py  presenters.py
src/renovate_datasource/adapters/providers/: __init__.py  k3s.py  redhat_catalog.py
src/renovate_datasource/core/: __init__.py  base.py  registry.py
src/renovate_datasource/domain/: __init__.py  entities.py  exceptions.py  provider_protocol.py
src/renovate_datasource/infrastructure/: __init__.py  config.py
src/renovate_datasource/infrastructure/cli/: __init__.py  common.py
src/renovate_datasource/infrastructure/cli/commands/: k3s.py  redhat_catalog.py
src/renovate_datasource/providers/: __init__.py  redhat_docker.py
src/renovate_datasource/use_cases/: __init__.py  generate_manifest.py
tests/: __init__.py  conftest.py  test_cli.py
tests/adapters/: __init__.py  test_providers.py
tests/core/: test_base.py  test_registry.py
tests/domain/: test_entities.py
tests/providers/: test_redhat_docker.py
tests/use_cases/: __init__.py  test_generate_manifest.py
